// Copyright (c) F5, Inc.
//
// This source code is licensed under the Apache License, Version 2.0 license found in the
// LICENSE file in the root directory of this source tree.

// These proto definitions follow https://protobuf.dev/programming-guides/style/
// and recommendations outlined in https://static.sched.com/hosted_files/kccncna17/ad/2017%20CloudNativeCon%20-%20Mod%20gRPC%20Services.pdf
syntax = "proto3";
package mpi.v1;

option go_package = "mpi/v1";

import "mpi/v1/common.proto";
import "mpi/v1/files.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

// A service outlining the command and control options for a Data Plane Client
// All operations are written from a client perspective
// The RPC calls generally flow Client -> Server, except for Subscribe which contains a bidirectional stream
// The ManagementPlaneRequest sent in the Subscribe stream triggers one or more client actions.
// Messages provided by the Management Plane must be a FIFO ordered queue. Messages in the queue must have a monotonically-increasing integer index. 
// The indexes do not need to be sequential. The index must be a 64-bit signed integer.
// The index must not reset for the entire lifetime of a unique Agent (i.e. the index does not reset to 0 only because of a temporary disconnection or new session). 
// Messages must not be removed from the Management Plane queue until Ack’d by the Agent. 
// Messages sent but not yet Ack’d must be kept in an “in-flight” buffer as they may need to be retried.
service CommandService {
    // Connects NGINX Agent to the Management Plane agnostic of instance data
    rpc CreateConnection(CreateConnectionRequest) returns (CreateConnectionResponse) {}
    // Reports on instances and their configurations
    rpc UpdateDataPlaneStatus(UpdateDataPlaneStatusRequest) returns (UpdateDataPlaneStatusResponse) {}
    // Reports on instance health
    rpc UpdateDataPlaneHealth(UpdateDataPlaneHealthRequest) returns (UpdateDataPlaneHealthResponse) {}
    // A decoupled communication mechanism between the data plane and management plane.
    // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
    // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
    rpc Subscribe(stream DataPlaneResponse) returns (stream ManagementPlaneRequest) {}
}

// The connection request is an initial handshake to establish a connection, sending NGINX Agent instance information
message CreateConnectionRequest {
    // Meta-information associated with a message
    mpi.v1.MessageMeta message_meta = 1;
    // Instance and infrastructure information associated with the NGINX Agent
    Resource resource = 2;
}

// A representation of instances and runtime resource information
message Resource {
    // A resource identifier
    string resource_id = 1 [(buf.validate.field).string.uuid = true];
    // A list of instances associated with this resource
    repeated Instance instances = 2;
    // Runtime information of where the instances reside. Host or container based
    oneof info {
        // If running on bare-metal, provides additional information
        HostInfo host_info = 3;
        // If running in a containerized environment, provides additional information
        ContainerInfo container_info = 4;
    }
}

// Represents the host system information
message HostInfo {
    // The host identifier
    string host_id = 1 [(buf.validate.field).string.uuid = true];
    // The name of the host
    string hostname = 2 [(buf.validate.field).string.address = true];
    // Release information of the host
    ReleaseInfo release_info = 3;
}

// Release information of the host
message ReleaseInfo {
    // OS type (e.g. freebsd, linux, etc)
    string codename = 1;
    // OS name (e.g. ubuntu, linuxmint, etc)
    string id = 2;
    // OS family (e.g. debian, rhel)
    string name = 3;
    // Version of the OS kernel
    string version_id = 4;
    // Version of the OS
    string version = 5;
}

// Container information
message ContainerInfo {
    // The identifier of the container
    string container_id = 1 [(buf.validate.field).string.uuid = true];
}

// A response to a CreateConnectionRequest
message CreateConnectionResponse {
    // The success or failure of the CreateConnectionRequest
    mpi.v1.CommandResponse response = 1;
    // The recommendation NGINX Agent configurations provided by the ManagementPlane
    AgentConfig agent_config = 2;
}

// Report on the status of the Data Plane
message UpdateDataPlaneStatusRequest {
    // Meta-information associated with a message
    mpi.v1.MessageMeta message_meta = 1;
    // the representation of a data plane
    Resource resource = 2;
}

// Respond to a UpdateDataPlaneStatusRequest - intentionally empty
message UpdateDataPlaneStatusResponse {}

message InstanceHealth {
    // Health status enum
    enum InstanceHealthStatus {
        // Unspecified status
        INSTANCE_HEALTH_STATUS_UNSPECIFIED = 0;
        // Healthy status
        INSTANCE_HEALTH_STATUS_HEALTHY = 1;
        // Unhealthy status
        INSTANCE_HEALTH_STATUS_UNHEALTHY = 2;
        // Degraded status
        INSTANCE_HEALTH_STATUS_DEGRADED = 3;
    }
    string instance_id = 1 [(buf.validate.field).string.uuid = true];
    // Health status
    InstanceHealthStatus instance_health_status = 2;
    // Provides a human readable context around why a health status is a particular state
    string description = 3;
}

// Health report of a set of instances
message UpdateDataPlaneHealthRequest {
    // Meta-information associated with a message
    mpi.v1.MessageMeta message_meta = 1;
    // Health report of a set of instances
    repeated InstanceHealth instance_healths = 2;
}

// Response to a UpdateDataPlaneHealthRequest - intentionally empty
message UpdateDataPlaneHealthResponse {}

// Reports the status of an associated command. This may be in response to a ManagementPlaneRequest
message DataPlaneResponse {
    // Meta-information associated with a message
    mpi.v1.MessageMeta message_meta = 1;
    // The command response with the associated request
    mpi.v1.CommandResponse command_response = 2;
    // The instance identifier, if applicable, for this response
    string instance_id = 3;
}

// A Management Plane request for information, triggers an associated rpc on the Data Plane
message ManagementPlaneRequest {
    // Meta-information associated with a message
    mpi.v1.MessageMeta message_meta = 1;
    oneof request {
        // triggers a DataPlaneStatus rpc
        StatusRequest status_request = 2;
        // triggers a DataPlaneHealth rpc
        HealthRequest health_request = 3;
        // triggers a rpc GetFile(FileRequest) for overview list, 
        // if overview is missing, triggers a rpc GetOverview(ConfigVersion) first
        ConfigApplyRequest config_apply_request = 5;
        // triggers a series of rpc UpdateFile(File) for that instances
        ConfigUploadRequest config_upload_request = 6;
        // triggers a DataPlaneResponse with a command_response for a particular action
        APIActionRequest action_request = 7;
        // triggers a DataPlaneResponse with a command_response for a particular correlation_id
        CommandStatusRequest command_status_request = 8;
    }
}

// Additional information associated with a StatusRequest
message StatusRequest {}

// Additional information associated with a HealthRequest
message HealthRequest {}

// Additional information associated with a ConfigApplyRequest
message ConfigApplyRequest {
    // the config version
    mpi.v1.ConfigVersion config_version = 1;
    // an optional set of files related to the request
    optional mpi.v1.FileOverview overview = 2;
}

// Additional information associated with a ConfigUploadRequest
message ConfigUploadRequest {
    // the instance identifier
    string instance_id = 1;
    // an optional set of files related to the request
    optional mpi.v1.FileOverview overview = 2;
}

// Perform an associated API action on an instance
message APIActionRequest {}

// Request an update on a particular command
message CommandStatusRequest {}

// This represents an instance being reported on
message Instance {
    // Meta-information associated with an instance
    InstanceMeta instance_meta = 1;
    // Read and write configuration associated with an instance that can be modified via this definition
    InstanceConfig instance_config = 2;
    // Read-only meta data associated with the instance running in it's environment
    InstanceRuntime instance_runtime = 3;
}

// Meta-information relating to the reported instance
message InstanceMeta {
    // the identifier associated with the instance
    string instance_id = 1 [(buf.validate.field).string.uuid = true];
    // the types of instances possible
    enum InstanceType {
        // Unspecified instance type
        INSTANCE_TYPE_UNSPECIFIED = 0;
        // NGINX Agent
        INSTANCE_TYPE_AGENT = 1;
        // NGINX
        INSTANCE_TYPE_NGINX = 2;
        // NGINX Plus
        INSTANCE_TYPE_NGINX_PLUS = 3;
        // NGINX Unit
        INSTANCE_TYPE_UNIT = 4;
    }
    // the types of instances possible
    InstanceType instance_type = 2;
    // the version of the instance
    string version = 3;
}

// Instance Configuration options
message InstanceConfig {
    // provided actions associated with a particular instance. These are runtime based and provided by a particular version of the NGINX Agent
    repeated InstanceAction actions = 1;
    oneof config {
        // NGINX Agent runtime configuration settings
        AgentConfig agent_config = 2;
    }
}

message InstanceRuntime {
    // the process identifier
    int32 process_id = 1;
    // the binary path location
    string binary_path = 2 [(buf.validate.field).string.prefix = "/"];
    // the config path location
    string config_path = 3 [(buf.validate.field).string.prefix = "/"];
    // more detailed runtime objects
    oneof details {
        // NGINX runtime configuration settings like stub_status, usually read from the NGINX config or NGINX process
        NGINXRuntimeInfo nginx_runtime_info = 4;
        // NGINX Plus runtime configuration settings like api value, usually read from the NGINX config, NGINX process or NGINX Plus API
        NGINXPlusRuntimeInfo nginx_plus_runtime_info = 5;
    }
    // List of worker processes
    repeated InstanceChild instance_children = 6;
}

message InstanceChild {
    // the process identifier
    int32 process_id = 1;
}

// A set of runtime NGINX OSS settings
message NGINXRuntimeInfo {
    // the stub status API URL
    string stub_status = 1 [(buf.validate.field).cel = {
        id:  "string.uri",
        message: "value must be a valid URI or can be empty",
        expression: "this == \'\' || this.isUri()"
    }];
    // a list of access_logs
    repeated string access_logs = 2; 
    // a list of error_logs
    repeated string error_logs = 3;
    // List of NGINX potentially loadable modules (installed but not loaded).
    repeated string loadable_modules = 4;
    // List of NGINX dynamic modules.
    repeated string dynamic_modules = 5;
}

// A set of runtime NGINX Plus settings
message NGINXPlusRuntimeInfo {
    // the stub status API URL
    string stub_status = 1 [(buf.validate.field).cel = {
        id:  "string.uri",
        message: "value must be a valid URI or can be empty",
        expression: "this == \'\' || this.isUri()"
    }];
    // a list of access_logs
    repeated string access_logs = 2;
    // a list of error_logs
    repeated string error_logs = 3;
    // List of NGINX potentially loadable modules (installed but not loaded).
    repeated string loadable_modules = 4;
    // List of NGINX dynamic modules.
    repeated string dynamic_modules = 5;
    // the plus API location
    string plus_api = 6 [(buf.validate.field).cel = {
        id:  "string.uri",
        message: "value must be a valid URI or can be empty",
        expression: "this == \'\' || this.isUri()"
    }];
}

// A set of actions that can be performed on an instance
message InstanceAction {}

// This contains a series of NGINX Agent configurations
message AgentConfig { 
    // Command server settings
    CommandServer command = 1;
    // Metrics server settings
    MetricsServer metrics = 2;
    // File server settings
    FileServer file = 3;
    // A series of key/value pairs to add more data to the NGINX Agent instance
    repeated google.protobuf.Struct labels = 4;
    // A list of features that the NGINX Agent has
    repeated string features = 5;
    // Message buffer size, maximum not acknowledged messages from the subscribe perspective
    string message_buffer_size = 6;
}

// The command settings, associated with messaging from an external source 
message CommandServer {}

// The metrics settings associated with origins (sources) of the metrics and destinations (exporter)
message MetricsServer {}

// The file settings associated with file server for configurations
message FileServer {}
